--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "description": "",
   "main": "server.js",
   "scripts": {
+     "dev": "node server",
     "start": "node server.js",
-    "server": "node server.js"
+    "serve": "node server.js"
   },
   "dependencies": {
     "body-parser": "^1.20.2",
